# matrix-gui-esp32s3-demo

./: Cargo.toml  README.md  index.html  matrix_gui_web-af5fb49f39c6735d.js  matrix_gui_web-af5fb49f39c6735d_bg.wasm
.cargo/: config.toml
demo-pages/: Cargo.toml
demo-pages/src/: lib.rs
demo-pages/src/pages/: anim_switch.rs  basic_example.rs  calculator.rs  mod.rs
domo-pages/: Cargo.toml
domo-pages/assets/: GB2313_Tier1.txt
domo-pages/src/: lib.rs
domo-pages/src/pages/: msg_box.rs
esp32s3/: Cargo.toml
esp32s3/src/: main.rs
src/: cst816d.rs  main.rs  pages.rs
src/pages/: anim_switch.rs  basic_example.rs  calculator.rs  msg_box.rs
web/: Cargo.toml  README.md  index.html
web/src/: lib.rs
