[package]
name = "matrix-gui-esp32s3"
version = "0.1.0"
description = "Matrix GUO on esp32s3"
keywords = ["esp-hal", "esp32"]
license = "MIT"
edition = "2024"

[features]
default = ["esp32s3", "jtag", "log"]

log = [
    "dep:log",
    "esp-bootloader-esp-idf/log-04",
    "esp-hal/log-04",
    "esp-println/log-04",
    "esp-backtrace/println",
]

jtag = ["esp-println/jtag-serial"]
uart = ["esp-println/uart"]

esp32s3 = [
    "esp-bootloader-esp-idf/esp32s3",
    "esp-hal/esp32s3",
    "esp-println/esp32s3",
    "esp-backtrace/esp32s3",
]

[dependencies]
embassy-executor = "0.10"
embassy-time = "0.5"
embassy-sync = "0.8"
esp-rtos = { version = "0.3", features = ["esp32s3", "embassy", "log-04"] }
esp-bootloader-esp-idf = { version = "0.5.0" }
esp-hal = { version = "1.1.0", features = ["unstable", "log-04"] }
esp-println = { version = "0.17.0", default-features = false, features = [
    "critical-section",
    "colors",
] }
esp-backtrace = { version = "0.19.0", features = ["panic-handler"] }
multi-mono-font = { version = "0.4" }

defmt = { version = "1.0.1", optional = true }
log = { version = "0.4", optional = true }

embedded-hal = "1.0"
st7789-lcd = "0.4.0"
embedded-hal-bus = "0.3.0"
dummy-pin = "1.0.0"
embedded-graphics = "0.8.2"
matrix-gui = { version = "0.1.0", features = ["part", "popup"] }
enum-iterator = "2.3.0"
critical-section = "1.2.0"
heapless = "0.9.2"
local_static = "0.1"
num-traits = { version = "0.2", default-features = false }

[patch.crates-io]
matrix-gui = { git = "https://github.com/Merisy-Thing/matrix-gui.git", branch = "main"  }