[package]
name = "matrix-gui-demo-pages"
version = "0.1.0"
description = "Matrix GUI demo pages"
authors = ["Merisy-Thing <merisy-thing@outlook.com>"]
keywords = ["Matrix GUI"]
license = "MIT"
edition = "2024"

[dependencies]
matrix-gui = { version = "0.3", features = ["part", "popup", "animation"] }
multi-mono-font = { version = "0.5" }
log = { version = "0.4" }
embedded-graphics = "0.8"
enum-iterator = "2.3"
heapless = "0.9"
local_static = "0.1"
num-traits = { version = "0.2", default-features = false }
bare-sync = "0.1.1"

[patch.crates-io]
#matrix-gui = { git = "https://github.com/Merisy-Thing/matrix-gui.git", branch = "main"  }
