# You must change these to your own details.
[package]
name = "matrix_gui_web"
description = "Matrix GUI on web"
version = "0.1.0"
authors = ["Merisy-Thing <merisy-thing@outlook.com>"]
categories = ["wasm"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
# This makes the compiled code faster and smaller, but it makes compiling slower,
# so it's only enabled in release mode.
lto = true

[dependencies]
# The `wasm-bindgen` crate provides the bare minimum functionality needed
# to interact with JavaScript.
wasm-bindgen = "0.2"
embedded-graphics-web-simulator = "0.4"
embedded-graphics = "0.8"
enum-iterator = "2.3"
matrix-gui-demo-pages = { path = "../domo-pages" }
bare-sync = "0.1"
console_error_panic_hook = "0.1"

# The `web-sys` crate allows you to interact with the various browser APIs,
# like the DOM.
[dependencies.web-sys]
version = "0.3"
features = [
	"console",
	"CanvasRenderingContext2d",
	"Document",
	"Element",
	"HtmlCanvasElement",
	"Window",
	"MouseEvent",
	"NodeList",
	"HtmlCollection",
	"DomRect",
]

[patch.crates-io]
#matrix-gui = { git = "https://github.com/Merisy-Thing/matrix-gui.git", branch = "main" }
